# quant-hub

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  deploy.sh  main.py  pyproject.toml  requirements.txt  ruff.toml
.github/: FUNDING.yml  deploy.yml
.github/workflows/: deploy.yml  ruff.yml
base/: config_reader.py  discord.py  enums.py  scheduler.py
config/: discord.json.sample  env_config.py  notification.json  strategy.json
internal/notification/: VolumeBomb.py  scheduler.py
internal/strategy/: scheduler.py
